--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-
+    <div id="container">
+        <div id="left-container"></div>
+        <div id="right-container">
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto ducimus exercitationem, obcaecati optio repellat sequi ullam. Accusantium autem beatae consectetur debitis distinctio dolor maxime, minima quia quisquam quo reprehenderit?</p>
+                <p>You know you want to.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
