--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto ducimus exercitationem, obcaecati optio repellat sequi ullam. Accusantium autem beatae consectetur debitis distinctio dolor maxime, minima quia quisquam quo reprehenderit?</p>
                 <p>You know you want to.</p>
             </div>
+            <div id="form-container">
+                <p>Let's do this!</p>
+                <form>
+                    <div id="first-row">
+                        <label for="first-name">FIRST NAME</label>
+                        <input id="first-name" type="text">
+
+                        <label for="last-name">LAST NAME</label>
+                        <input id="last-name" type="text">
+                    </div>
+                    <div id="second-row">
+                        <label for="email">EMAIL</label>
+                        <input id="email" type="email" required>
+
+                        <label for="number">PHONE NUMBER</label>
+                        <input id="number" type="text">
+                    </div>
+                    <div id="third-row">
+                        <label for="password">PASSWORD</label>
+                        <input id="password" type="password" required>
+
+                        <label for="confirm-password">CONFIRM PASSWORD</label>
+                        <input id="confirm-password" type="password" required>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </body>
