create account button added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     </div>
                 </form>
             </div>
+            <button>Create Account</button>
         </div>
     </div>
 </body>
