added background image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div id="container">
-        <div id="left-container"></div>
+        <div id="left-container">
+            <img src="media/background.jpg" alt="background image">
+        </div>
         <div id="right-container">
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto ducimus exercitationem, obcaecati optio repellat sequi ullam. Accusantium autem beatae consectetur debitis distinctio dolor maxime, minima quia quisquam quo reprehenderit?</p>
