--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <div id="left-container">
-            <img src="media/background.jpg" alt="background image">
+            <img id="background" src="media/background.jpg" alt="background image">
         </div>
         <div id="right-container">
             <div>
