--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
     <div id="container">
         <div id="left-container">
-            <img id="background" src="media/background.jpg" alt="background image">
+            <div id="logo">
+                <img id="logo-img" src="media/odin-lined.png" alt="logo">
+                <p id="logo-header">ODIN</p>
+            </div>
+<!--            <img id="background" src="media/background.jpg" alt="background image">-->
         </div>
         <div id="right-container">
             <div>
