added some form style

--- a/index.html
+++ b/index.html
@@ -23,25 +23,40 @@
                 <p>Let's do this!</p>
                 <form>
                     <div id="first-row">
-                        <label for="first-name">FIRST NAME</label>
-                        <input id="first-name" type="text">
+                        <div>
+                            <label for="first-name">FIRST NAME</label>
+                            <input id="first-name" type="text">
+                        </div>
 
-                        <label for="last-name">LAST NAME</label>
-                        <input id="last-name" type="text">
+                        <div>
+                            <label for="last-name">LAST NAME</label>
+                            <input id="last-name" type="text">
+                        </div>
+
                     </div>
                     <div id="second-row">
-                        <label for="email">EMAIL</label>
-                        <input id="email" type="email" required>
+                        <div>
+                            <label for="email">EMAIL</label>
+                            <input id="email" type="email" required>
+                        </div>
 
-                        <label for="number">PHONE NUMBER</label>
-                        <input id="number" type="text">
+                        <div>
+                            <label for="number">PHONE NUMBER</label>
+                            <input id="number" type="text">
+                        </div>
+
                     </div>
                     <div id="third-row">
-                        <label for="password">PASSWORD</label>
-                        <input id="password" type="password" required>
+                        <div>
+                            <label for="password">PASSWORD</label>
+                            <input id="password" type="password" required>
+                        </div>
 
-                        <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input id="confirm-password" type="password" required>
+                        <div>
+                            <label for="confirm-password">CONFIRM PASSWORD</label>
+                            <input id="confirm-password" type="password" required>
+                        </div>
+
                     </div>
                 </form>
             </div>
