added some form style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--            <img id="background" src="media/background.jpg" alt="background image">-->
         </div>
         <div id="right-container">
-            <div>
+            <div id="text-header">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto ducimus exercitationem, obcaecati optio repellat sequi ullam. Accusantium autem beatae consectetur debitis distinctio dolor maxime, minima quia quisquam quo reprehenderit?</p>
                 <p>You know you want to.</p>
             </div>
@@ -61,7 +61,7 @@
                 </form>
             </div>
             <button>Create Account</button>
-            <p>Already have an account? <a href="index.html">log in</a></p>
+            <p id="login">Already have an account? <a href="index.html">log in</a></p>
         </div>
     </div>
 </body>
