added some form style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="right-container">
             <div id="text-header">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto ducimus exercitationem, obcaecati optio repellat sequi ullam. Accusantium autem beatae consectetur debitis distinctio dolor maxime, minima quia quisquam quo reprehenderit?</p>
-                <p>You know you want to.</p>
+                <p id="form-text">You know you want to.</p>
             </div>
             <div id="form-container">
                 <p>Let's do this!</p>
