added some form style

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         </div>
         <div id="right-container">
             <div id="text-header">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto ducimus exercitationem, obcaecati optio repellat sequi ullam. Accusantium autem beatae consectetur debitis distinctio dolor maxime, minima quia quisquam quo reprehenderit?</p>
-                <p id="form-text">You know you want to.</p>
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>
+                Sign up <em>now</em> to get started</p>
+                <p >You <em>know</em> you want to.</p>
             </div>
             <div id="form-container">
-                <p>Let's do this!</p>
+                <p >Let's do this!</p>
                 <form>
                     <div id="first-row">
                         <div>
